# fe-coo-analytics-sim

./: .gitignore  README.md  pyproject.toml
app/: Home.py  _sidebar.py  app_utils.py
app/pages/: 01_Overview.py  02_PnL_Drilldown.py  03_Liquidity.py  04_Earnings_Window.py  99_Raw_Data_Explorer.py
data/raw/: earnings_calendar.csv  liquidity.csv  prices.csv  security_master.csv  trades.csv
fe_coo_analytics/: db.py  metrics_earnings.py  metrics_exposure.py  metrics_liquidity.py  metrics_pnl.py  validate.py
fe_coo_analytics_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/: db.py  generate_data.py  run_sql_models.py
pipelines/: build_mart_flow.py
sql/: 01_daily_positions.sql  02_daily_pnl.sql  03_exposures.sql  04_liquidity.sql  05_earnings_window.sql
tests/: test_exposure.py  test_keys.py  test_liquidity.py  test_pnl.py
