[project]
name = "fe-coo-analytics-sim"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
  "streamlit>=1.30",
  "duckdb>=0.10",
  "pandas>=2.0",
  "python-dotenv>=1.0",
  "prefect==3.6.18"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fe_coo_analytics*"]

[tool.poetry]
name = "fe-coo-analytics-sim"
version = "0.1.0"
package-mode = false